<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:rsv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/viewForSnackBar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/dialog_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/difficulty" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/difficulty" />
        </LinearLayout>

        <com.github.channguyen.rsv.RangeSliderView
            android:id="@+id/rsv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            rsv:filledColor="@color/colorPrimaryDark"
            rsv:emptyColor="@android:color/darker_gray"
            rsv:rangeCount="3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/who_begin" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_begin"
                android:paddingLeft="5dp"
                android:id="@+id/radioButtonPlayerUser" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/computer_begin"
                android:paddingLeft="5dp"
                android:id="@+id/radioButtonPlayerComputer" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/piece_color" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/piece_red"
                android:paddingLeft="5dp"
                android:id="@+id/redPiece" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/piece_yellow"
                android:paddingLeft="5dp"
                android:id="@+id/yellowPiece" />

        </RadioGroup>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>